# programacion-2

./: README.md
programacion/repaso pc1/ejercicio1/: CMakeLists.txt
programacion/repaso pc1/ejercicio1/ejercicio1/: CMakeLists.txt  ejercicio1.cpp  ejercicio1.h  empleado.h  fecha.h
programacion/semana 4/Project1/: Project1.sln
programacion/semana 4/Project1/Project1/: Empleado.cpp  Empleado.h  Project1.vcxproj  Project1.vcxproj.filters  fecha.cpp  fecha.h
